--- a/packages/dawn/assets/css/misc/utils.css
+++ b/packages/dawn/assets/css/misc/utils.css
@@ -11,7 +11,7 @@
 .u-placeholder {
     position: relative;
     z-index: 10;
-    background-color: var(--lighter-gray-color);
+/*    background-color: var(--lighter-gray-color);*/
 }
 
 .u-placeholder::before {
@@ -38,4 +38,13 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.u-object-fit-none {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: scale-down;
 }
