--- a/packages/dawn/default.hbs
+++ b/packages/dawn/default.hbs
@@ -48,7 +48,7 @@
                     {{/match}}
                 {{else}}
                     <button class="gh-search gh-icon-btn" data-ghost-search>{{> "icons/search"}}</button>
-                    <div class="gh-head-members">
+                    {{!-- <div class="gh-head-members">
                         {{#unless @member}}
                             {{#unless @site.members_invite_only}}
                                 <a class="gh-head-link" href="#/portal/signin" data-portal="signin">Sign in</a>
@@ -59,7 +59,7 @@
                         {{else}}
                             <a class="gh-head-btn gh-btn gh-primary-btn" href="#/portal/account" data-portal="account">Account</a>
                         {{/unless}}
-                    </div>
+                    </div> --}}
                 {{/unless}}
             </div>
         </div>
