--- a/packages/dawn/partials/content.hbs
+++ b/packages/dawn/partials/content.hbs
@@ -25,18 +25,18 @@
 
         <h1 class="single-title">{{title}}</h1>
 
-        {{#if custom_excerpt}}
+        {{!-- {{#if custom_excerpt}}
             <div class="single-excerpt">
                 {{custom_excerpt}}
             </div>
-        {{/if}}
+        {{/if}} --}}
 
         {{#if feature_image}}
         {{#unless no_image}}
             <figure class="single-media kg-width-{{width}}">
                 <div class="u-placeholder horizontal">
                     <img
-                        class="u-object-fit"
+                        class="u-object-fit-none"
                         srcset="{{> srcset}}"
                         sizes="(min-width: 1200px) 920px, 92vw"
                         src="{{img_url feature_image size="l"}}"
